Fixed height of search bar on IE.

--- a/styles/_search-bar.sass
+++ b/styles/_search-bar.sass
@@ -27,10 +27,10 @@ header
   input[type="text"]
     border: 0
     border-radius: 0
-    /* mobile safari
     box-sizing: border-box
     display: inline-block
     font-size: 16px
+    height: 60px
     line-height: 58px
     margin: 0
     outline: none
